2012-02-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] MiniBrowser should reload the view then the reload button is clicked
        https://bugs.webkit.org/show_bug.cgi?id=79472

        Reviewed by Philippe Normand.

        * MiniBrowser/gtk/BrowserWindow.c:
        (reloadCallback): Call webkit_web_view_reload().
        (browser_window_init): Connect reload item clicked even to
        reloadCallback instead of activateUriEntryCallback.

2012-02-24  Kentaro Hara  <haraken@chromium.org>

        Add performance tests for DOM attribute getters and setters
        https://bugs.webkit.org/show_bug.cgi?id=79208

        Reviewed by Ryosuke Niwa.

        We want to allow perf tests to output info messages
        that do not affect the test results. To accomplish this,
        this patch modifies perftestsrunner.py so that it ignores
        a line that starts from "Info:".

        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner):

2012-02-24  Andrew Lo  <anlo@rim.com>

        [BlackBerry] Enable requestAnimationFrame
        https://bugs.webkit.org/show_bug.cgi?id=79408

        Enable requestAnimationFrame for BlackBerry.

        Reviewed by Rob Buis.

        * Scripts/build-webkit:

2012-02-24  Adam Barth  <abarth@webkit.org>

        style-queue tries to apply the patch twice
        https://bugs.webkit.org/show_bug.cgi?id=79459

        Reviewed by Eric Seidel.

        Previously, we applied the patch using both apply-patch and
        check-style.  This patch introduces a check-style-local to mirror the
        apply-watchlist-local, which operates on the current working diff.

        This patch also cleans up some other bugs I found by running the queue
        locally for a while.  The queue still prints out a slightly
        less-than-ideal message on the bugs when it find an error, but it's ok
        for now.  We'll need to iterate a bit.

        * Scripts/webkitpy/tool/bot/stylequeuetask.py: