@@ -1,3 +1,15 @@
+2012-02-24  Balazs Kelemen  <kbalazs@webkit.org>
+
+        [Qt] Add Qt5 way to force 96 DPI for tests
+        https://bugs.webkit.org/show_bug.cgi?id=79364
+
+        Reviewed by Simon Hausmann.
+
+        * DumpRenderTree/qt/main.cpp:
+        (main):
+        * WebKitTestRunner/InjectedBundle/qt/ActivateFontsQt.cpp:
+        (WTR::activateFonts):
+
 2012-02-24  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] MiniBrowser should reload the view then the reload button is clicked
